feat: prepara backend para deploy no Railway
- server.port usa ${PORT:8080} (Railway injeta PORT dinamicamente)
- spring.data.redis.password suporta ${REDIS_PASSWORD:}
- cors.allowed-origins configurável via env var CORS_ALLOWED_ORIGINS
- adiciona Spring Boot Actuator com endpoint /actuator/health público
- cria railway.toml com health check e política de restart

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>